# DiscordCanvasIntegration

./: .gitignore  Account.cpp  Account.h  Account_Util.cpp  Account_Util.h  CMakeLists.txt  CanvasAPI.cpp  Checking_Account.cpp  Checking_Account.h  ConfigManager.cpp  Course.cpp  DatabaseManager.cpp  DatabaseManager.h  Guild.cpp  Guild.h  I_Printable.cpp  I_Printable.h  ImageFromHTML.cpp  Misc.cpp  MyString.cpp  MyString.h  Savings_Account.cpp  Savings_Account.h  Song.cpp  Song.h  TrackedCourse.cpp  Trust_Account.cpp  Trust_Account.h  User.cpp  main.cpp
SQL/: SQLManager.cpp  SQLManager.h
exceptions/: AccountException.h  IllegalBalanceException.h  InsufficientFundsException.h  TrustWithdrawException.h
include/: CanvasAPI.h  ConfigManager.h  Course.h  DatabaseManager.h  Guild.h  ImageFromHTML.h  Misc.h  TrackedCourse.h  UUID.h  User.h
include/exceptions/: AccessorNotFoundException.h  DocumentNotFoundException.h
